# OceanGL

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.sh
main/: main.cpp
main/helper_scene/: helper_scene.cpp  helper_scene.hpp
scenes/: current_scene.hpp
scenes/3D_graphics/01_modeling/: modeling.cpp  modeling.hpp
scenes/3D_graphics/01_modeling/boids/: AllBoidsManager.cpp  AllBoidsManager.hpp  Boid.cpp  Boid.hpp  BoidHelper.cpp  BoidHelper.hpp  BoidSettings.hpp  fish.cpp  fish.hpp
scenes/3D_graphics/01_modeling/controls/: controls.cpp  controls.hpp
scenes/3D_graphics/01_modeling/helpers/: trajectory_creators.cpp  trajectory_creators.h
scenes/3D_graphics/01_modeling/models/: AnimatedBird.cpp  AnimatedBird.h  AnimatedFish.cpp  AnimatedFish.h  WorldElement.cpp  WorldElement.h  billboards.cpp  billboards.h  models.cpp  models.h  skybox.cpp  skybox.h
scenes/3D_graphics/01_modeling/raymarcher/: Raymarcher.cpp  Raymarcher.hpp
scenes/3D_graphics/01_modeling/sharks_manager/: SharksManager.cpp  SharksManager.hpp
scenes/3D_graphics/01_modeling/simulations/: BouncingBall.cpp  BouncingBall.h
scenes/3D_graphics/01_modeling/terrain/: Chunk.cpp  Chunk.hpp  ChunkLoader.cpp  ChunkLoader.hpp  terrain.cpp  terrain.h
scenes/3D_graphics/01_modeling/trajectories/: Trajectory.cpp  Trajectory.h
scenes/shared_assets/shaders/mesh/: shader.frag.glsl
scenes/shared_assets/shaders/mesh_two_pass/: depth_pass.frag.glsl  depth_pass.vert.glsl  draw_pass.frag.glsl  draw_pass.vert.glsl
vcl/interaction/: interaction.hpp
vcl/interaction/camera/: camera.cpp  camera.hpp
vcl/interaction/camera_control_glfw/: camera_control_glfw.cpp  camera_control_glfw.hpp
vcl/interaction/light_animation_data/: light_animation_data.cpp  light_animation_data.hpp
vcl/math/mat/mat4/: mat4.cpp
vcl/math/transformation/affine_transform/: affine_transform.hpp
vcl/shape/mesh/mesh_drawable/: mesh_drawable.cpp  (+1 more)
(+7 files in other folders)
